deploy/dev/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote-app-dev
  name: vote-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-api-dev
      deploymentconfig: vote-api-dev
  template:
    metadata:
      labels:
        app: vote-api-dev
        deploymentconfig: vote-api-dev
    spec:
      containers:
      - image: sos54174/vote-api:v1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "600m"
            memory: "1Gi"
          limits:
            cpu: "600m"
            memory: "1Gi"
        volumeMounts:
        - mountPath: /app/config/
          name: app-config
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: app-config
        configMap:
          defaultMode: 420
          name: vote-api-dev-configmap
